# Frost

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  NOTICES  README.md  todo.md
bytecode/crates/frost-astviz/: Cargo.toml  build.rs  template.html
cpp/: CMakeLists.txt  frost.cpp  repl.cpp
cpp/ast/: CMakeLists.txt  array-constructor.cpp  array-destructure.cpp  ast-node.cpp  backtrace.cpp  binop.cpp  define.cpp  destructure-array.cpp  destructure-map.cpp  do.cpp  filter.cpp  foreach.cpp  format-string.cpp  function-call.cpp  function_call.cpp  if.cpp  index.cpp  literal.cpp  map-constructor.cpp  map-destructure.cpp  map.cpp  match-alternative.cpp  match-array.cpp  match-binding.cpp  match-map.cpp  match-value.cpp  name-lookup.cpp  name_lookup.cpp  reduce.cpp  statement.cpp  unop.cpp
cpp/ast/tests/: array-constructor.cpp  array-destructure.cpp  basic-ast-dump.cpp  binop.cpp  define.cpp  destructure-array-node.cpp  destructure-binding.cpp  destructure-leaf.cpp  destructure-map-node.cpp  do.cpp  filter.cpp  foreach.cpp  format-string.cpp  function-call.cpp  function_call.cpp  if.cpp  index.cpp  literal.cpp  map-constructor.cpp  map-destructure.cpp  map.cpp  match-alternative.cpp  match-array.cpp  match-binding.cpp  match-leaf.cpp  match-map.cpp  match-value.cpp  match.cpp  name-lookup-node.cpp  name_lookup.cpp  reduce.cpp  symbol-sequence.cpp  unop.cpp  walk.cpp
cpp/execution-context/: CMakeLists.txt  symbol-table.cpp
cpp/ext/: CMakeLists.txt  ext.cpp
cpp/ext/compression/: CMakeLists.txt  NOTICES  brotli.cpp  bz2.cpp  compression.cpp  decompress-limits.hpp  deflate.cpp  gzip.cpp  lz4.cpp  snappy.cpp  xz.cpp  zlib-common.cpp  zlib-common.hpp  zlib.cpp  zstd.cpp
cpp/ext/extensions-common/: CMakeLists.txt
cpp/ext/hash/: CMakeLists.txt  NOTICES  hash.cpp
cpp/ext/http/: NOTICES  (+4 more)
cpp/functions/: CMakeLists.txt  builtin.cpp  closure.cpp  inject-builtins.cpp  lambda.cpp  stdlib.cpp
cpp/import/: CMakeLists.txt
cpp/meta/: CMakeLists.txt  import.cpp  meta.cpp
cpp/parser/: CMakeLists.txt  grammar.hpp  parser.cpp
cpp/prelude/: CMakeLists.txt  prelude.cpp  prelude.frst
cpp/symbol-table/: symbol-table.cpp
cpp/tooling/: CMakeLists.txt  astviz.cpp  template.html
cpp/utils/: CMakeLists.txt  parse-fmt-string.cpp  trim-multiline.cpp
cpp/value/: CMakeLists.txt  clone.cpp  exceptions.cpp  explicit-conversions.cpp  index-array.cpp  internal-map-compare.cpp
implementation/: .clang-format  .clang-tidy  .clangd  .dockerignore  CMakeLists.txt  Dockerfile  TODO.md
implementation/cmake/: clang-tidy-targets.cmake  cppcodec.cmake  get-catch.cmake  get-fmt.cmake  get-lexy.cmake  get-lyra.cmake  get-replxx.cmake  get-test-libs.cmake  lyra.cmake
implementation/cpp/: CMakeLists.txt  frost.cpp  repl.cpp
implementation/frost-scripts/: fib.frst  lazy.frst  re.frst  req.frst  strange-curry.frst
implementation/integration-tests/: CMakeLists.txt  capture-enclosing-closure.frst  map-newline-1.frst  prelude-collect.frst  prelude-compose.frst  runner.lua  ufcs-chain.frst
integration-tests/: CMakeLists.txt  capture-enclosing-closure.frst  escaped-self-reference.frst  map-newline-1.frst  match-capture-strain.frst  match-strain.frst  recursive-destructure.frst  runner.lua  smoke-2.frst  smoke.frst
integration-tests/backtrace/: CMakeLists.txt  catch-continue-after.frst  catch-continue-after.frst.traced.stderr  catch-continue-through.frst  catch-continue-through.frst.traced.stderr  catch-deep-then-crash.frst  catch-deep-then-crash.frst.traced.stderr  catch-different-errors.frst  catch-different-errors.frst.plain.stderr  catch-different-errors.frst.traced.stderr  chain-a.frst  chain-a.frst.traced.stderr  chain-b.frst  chain-c.frst  error-arg-evaluation.frst  error-arg-evaluation.frst.traced.stderr  error-before-hof-boundary.frst  error-before-hof-boundary.frst.traced.stderr  error-calling-non-function.frst  error-calling-non-function.frst.plain.stderr  error-calling-non-function.frst.traced.stderr  error-deeply-nested.frst  error-deeply-nested.frst.traced.stderr  error-destructure-array.frst  error-destructure-array.frst.traced.stderr  error-destructure-computed-key.frst  error-destructure-computed-key.frst.traced.stderr  error-destructure-deeply-nested.frst  error-destructure-deeply-nested.frst.traced.stderr  error-destructure-map-in-array.frst  error-destructure-map-in-array.frst.plain.stderr  error-destructure-map-in-array.frst.traced.stderr  error-destructure-map.frst  error-destructure-map.frst.plain.stderr  error-destructure-map.frst.traced.stderr  error-destructure-nested-array.frst  error-destructure-nested-array.frst.plain.stderr  error-destructure-nested-array.frst.traced.stderr  error-in-array-constructor.frst  error-in-array-constructor.frst.traced.stderr  (+47 more)
integration-tests/frost-scripts/: CMakeLists.txt  import-runner.frst  test-autodecompress.frst  test-fib.frst  test-lazy.frst  test-object.frst  test-re.frst
integration-tests/http/: httpbin-cleanup.sh  httpbin-get.frst  httpbin-outbound-multivalue.frst  httpbin-post.frst  httpbin-response-headers.frst  httpbin-status-204.frst  httpbin-status-500-ok.frst  https-ca-controls.frst  https-verify-toggle-runner.sh  https-verify-toggle.frst
integration-tests/import/: CMakeLists.txt  cwddupe.frst  export-recursive-destructure.frst  import-bad-args.frst  import-cache.frst  import-cycles.frst  import-deep.frst  import-destructure.frst  import-error-recovery.frst  import-imported-var.frst  import-local.frst  import-recursive-destructure.frst  import-retry-after-error.frst  noexports.frst  reports_imported.frst  runtime-error.frst
integration-tests/os/: CMakeLists.txt  run-basic.frst  run-concurrent-streams.frst  run-cwd.frst  run-env.frst  run-errors.frst  run-large-stdin.frst  run-signals.frst  run-stdin-edge.frst  run-stdin-reread.frst  run-stdin.frst  run-streams.frst
integration-tests/prelude/: collect.frst  compose.frst  const.frst  dig.frst  flat_map.frst  map_into.frst  map_keys_values.frst  product.frst  reject.frst  rev-args.frst  spread.frst  sum.frst  tap.frst
(+1114 files in other folders)
