[package]
name = "frost-astviz"
version.workspace = true
edition.workspace = true

[dependencies]
frost-parse = { path = "../frost-parse" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"
